tests/sumo/spec/departure/errors/edge_disallowed_ignore/options.sumo
--no-step-log --no-duration-log --net-file=net3.net.xml
-r input_additional.add.xml --tripinfo-output tripinfos.xml
--ignore-route-errors
